--- a/index.html
+++ b/index.html
@@ -2,93 +2,158 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Do You Love Me vinny? ❤️</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happy Anniversary Vinny</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            background: #ffe6e6;
-            text-align: center;
             font-family: 'Poppins', sans-serif;
-            color: purple;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            color: #ffffff;
+            background: url('images/vinny_background.jpg') no-repeat center center/cover;
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center top;
+            backdrop-filter: blur(3px); /* Slight blur effect */
+            min-height: 100vh;
+            position: relative;
             overflow: hidden;
         }
+
+        /* Floating Hearts & Balloons */
+        .heart, .balloon {
+            position: fixed;
+            font-size: 20px;
+            animation: floatUp 5s linear infinite;
+        }
+        @keyframes floatUp {
+            0% { transform: translateY(100vh); opacity: 1; }
+            100% { transform: translateY(-10vh); opacity: 0; }
+        }
+
+        /* Title Styling */
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 3em;
-            margin-top: 50px;
+            font-size: 3.5em;
+            margin-top: 20px;
+            animation: glow 2s infinite alternate;
+            text-align: center;
+            max-width: 90%;
+            word-wrap: break-word;
         }
-        .buttons {
-            margin-top: 30px;
+        @keyframes glow {
+            from { text-shadow: 0 0 10px #fff, 0 0 20px pink; }
+            to { text-shadow: 0 0 20px #fff, 0 0 30px pink; }
         }
-        .button {
-            font-size: 1.5em;
-            padding: 15px 30px;
-            margin: 10px;
-            border-radius: 20px;
-            border: none;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-        .yes {
-            background: pink;
-            color: white;
-        }
-        .yes:hover {
-            background: #ff4d79;
-        }
-        .no {
-            background: lightgray;
-            color: black;
-        }
-        .no:hover {
-            background: darkgray;
-        }
-        /* Love Letter Animation */
-        .letter {
-            position: fixed;
-            font-size: 25px;
-            animation: fall 3s linear forwards;
+
+        /* Heart with Vinny's Name */
+        .heart-vinny {
+            font-size: 2em;
             color: red;
+            font-family: 'Dancing Script', cursive;
+            position: absolute;
+            top: 10%;
+            left: 50%;
+            transform: translateX(-50%);
         }
-        @keyframes fall {
-            from { transform: translateY(-100px); opacity: 1; }
-            to { transform: translateY(100vh); opacity: 0; }
+
+        /* Link Container */
+        .link-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+            margin-top: 20px;
+        }
+
+        /* Buttons */
+        .button {
+            padding: 12px 25px;
+            font-size: 1.2em;
+            text-decoration: none;
+            color: white;
+            background-color: rgba(255, 255, 255, 0.2);
+            border: 2px solid white;
+            border-radius: 50px;
+            transition: all 0.3s ease;
+            display: inline-block;
+            width: 80%;
+            max-width: 300px;
+            text-align: center;
+        }
+        .button:hover {
+            background-color: white;
+            color: pink;
+        }
+
+        /* Message Section */
+        .message-box {
+            background: rgba(255, 255, 255, 0.8);
+            color: #333;
+            font-family: 'Dancing Script', cursive;
+            padding: 20px;
+            border-radius: 10px;
+            max-width: 600px;
+            margin: 30px auto;
+            text-align: center;
+            font-size: 1.5em;
+        }
+
+        /* Floating Hearts on Mobile */
+        @media (max-width: 768px) {
+            .heart, .balloon {
+                font-size: 15px;
+            }
+            h1 {
+                font-size: 2.5em;
+            }
         }
     </style>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            if (localStorage.getItem("selectedYes") === "true") {
-                window.location.href = 'main.html';
-            }
-        });
-
-        function goToPage(answer) {
-            if (answer === 'yes') {
-                localStorage.setItem("selectedYes", "true");
-                startLoveLetterAnimation();
-                setTimeout(() => window.location.href = 'main.html', 3000);
-            } else {
-                window.location.href = 'no.html';
-            }
-        }
-
-        function startLoveLetterAnimation() {
-            for (let i = 0; i < 50; i++) {  // You can increase this number for even more love letters
-                const letter = document.createElement('div');
-                letter.classList.add('letter');
-                letter.innerHTML = '💌';
-                letter.style.left = Math.random() * 100 + 'vw';
-                letter.style.animationDuration = (Math.random() * 2 + 1) + 's';
-                document.body.appendChild(letter);
-                setTimeout(() => letter.remove(), 3000);
-            }
-        }
-    </script>
 </head>
 <body>
-    <h1>Do you love me? ❤️</h1>
-    <div class="buttons">
-        <button class="button yes" onclick="goToPage('yes')">Yes</button>
-        <button class="button no" onclick="goToPage('no')">No</button>
+
+    <h1>Happy Anniversary Vinny ❤️</h1>
+    <div class="heart-vinny">❤️ Vinny ❤️</div>
+
+    <div class="link-container">
+        <a href="memories.html" class="button">Our Memories</a>
+        <a href="songs.html" class="button">Songs That Remind Me of You</a>
+        <a href="message.html" class="button">Message to You</a>
     </div>
+
+    <div class="message-box">
+        You helped me grow, love me despite my flaws, and stand by my side no matter what.  
+        Thank you for always being my rock. I love you forever. 💖
+    </div>
+
+    <script>
+        function createHeart() {
+            const heart = document.createElement('div');
+            heart.classList.add('heart');
+            heart.innerHTML = '❤️';
+            heart.style.left = Math.random() * 100 + 'vw';
+            heart.style.animationDuration = Math.random() * 3 + 3 + 's';
+            document.body.appendChild(heart);
+            setTimeout(() => heart.remove(), 5000);
+        }
+
+        function createBalloon() {
+            const balloon = document.createElement('div');
+            balloon.classList.add('balloon');
+            balloon.innerHTML = '🎈';
+            balloon.style.left = Math.random() * 100 + 'vw';
+            balloon.style.animationDuration = Math.random() * 3 + 3 + 's';
+            document.body.appendChild(balloon);
+            setTimeout(() => balloon.remove(), 5000);
+        }
+
+        setInterval(createHeart, 300);
+        setInterval(createBalloon, 600);
+    </script>
+
 </body>
 </html>
+
+           
