--- a/memories.html
+++ b/memories.html
@@ -49,7 +49,7 @@
         </div>
         <div class="memory">
             <img src="images/slipin.jpg" alt="You looked so cute!">
-            <p>You looked so cute! 😍</p>
+            <p>that was so cute 😍</p>
         </div>
         <div class="memory">
             <img src="images/dick.jpg" alt="When you drew a heart with your tip">
@@ -57,7 +57,7 @@
         </div>
         <div class="memory">
             <img src="images/brat.jpg" alt="I think about this every day">
-            <p>I really do lol</p>
+            <p> think about this everyday </p>
         </div>
         <div class="memory">
             <img src="images/child.jpg" alt="Found this cute">
