--- a/no.html
+++ b/no.html
@@ -2,38 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Are You Sure? 😢</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Why No? 😢</title>
     <style>
         body {
-            background: black;
             text-align: center;
+            background: #000;
             color: white;
-            font-family: 'Poppins', sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            flex-direction: column;
         }
-        img {
+        .no-img {
             width: 80%;
-            max-width: 500px;
-            border-radius: 15px;
+            max-width: 400px;
+            margin-top: 20px;
         }
-        .message {
+        .click-yes {
+            font-size: 1.5em;
+            color: red;
             position: absolute;
-            bottom: 20px;
-            right: 20px;
-            background: rgba(255, 0, 0, 0.7);
-            padding: 10px 15px;
-            border-radius: 10px;
-            font-size: 1.2em;
-            font-weight: bold;
+            bottom: 10px;
+            right: 10px;
         }
     </style>
 </head>
 <body>
-    <img src="images/no.jpg" alt="Sad Image">
-    <div class="message">Click on Yes bro 😭</div>
+    <h1>Why would you say no? 💔</h1>
+    <img src="images/no.jpg" class="no-img" alt="No Image">
+    <p class="click-yes">Click on Yes, bro 😤</p>
+
+    <script>
+        setTimeout(() => {
+            window.location.href = "yes-no.html";
+        }, 3000);
+    </script>
 </body>
 </html>
